# aws-lambda-examples

./: .gitignore  README.md  cdk.json  package.json
dotnet/hello-world/: .gitignore  Function.cs  HelloWorld.csproj
dotnet/hello-world-aot/: HelloWorld.csproj
dotnet/hello-world-r2r/: HelloWorld.csproj  aws-lambda-tools-defaults.json
lib/: dotnet-functions.ts  examples-stack.ts  rust-functions.ts
rust/hello-world/: Cargo.toml
rust/hello-world/src/: main.rs
rust/runtime-scraper/: Cargo.toml  README.md  deprecated_runtimes.csv  supported_runtimes.csv
rust/runtime-scraper/src/: http_handler.rs  main.rs
